Rename "register" to "signup"
